# labware-serverless

./: .gitignore  Cargo.toml  README.md  apigateway.json
src/: http_handler.rs  main.rs
src/controller/: mod.rs
src/services/: location_types.rs  mod.rs
src/wrappers/: mod.rs
terraform/: main.tf
terraform/modules/dynamodb/: main.tf  variables.tf
