[package]
name = "labwhere-rust-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.6"
aws-sdk-dynamodb = "1.93.0"
aws_lambda_events = { version = "0.18.0", default-features = false, features = ["apigw"] }
http = "1.3.1"
lambda_runtime = "0.14.4"

tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
mockall = "0.13.1"
